scroll behind overlay FIXED!

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,8 @@
       background-size: cover;
       background-position: center;
       border-radius: 50%;
-      border: solid 3px #eece1a; }
+      border: solid 3px #eece1a;
+      margin: 0.5rem; }
   .menu .nav-item {
     transform: translate3d(600px, 0, 0);
     transition: all .5s ease-out; }
